2015-05-21  Kirit Sælensminde  <kirit@felspar.com>
 Added middleware that can record requests so that database changes are tied in to them.

2015-05-19  Kirit Sælensminde  <kirit@felspar.com>
 Correctly join the URLs we find in the instance page with its URL.

2015-05-07  Kirit Sælensminde  <kirit@felspar.com>
 Get the Django 1.0 tests to run using Postgres.

2015-05-05  Kirit Sælensminde  <kirit@felspar.com>
 Added migrations for South and Django 1.7
 Added initial version of pull capability
 Added ChangeLog